# Speaker_Dialect_Detection

./: .gitignore  README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/nn/: default.yaml
src/speaker_dialect_detection/: run.py
src/speaker_dialect_detection/pl_modules/: pl_module.py
src/speaker_dialect_detection/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
