[metadata]
name = speaker_dialect_detection
description = Audio Classification on TIMIT dataset
url = https://github.com/veeravignesh1/speaker_dialect_detection
long_description = file: README.md
author = Veera Vignesh
author_email = kveeravignesh2@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core>=0.1.0,<0.2

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning>=1.5.8,<1.6
    hydra-core
    wandb
    streamlit
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
